--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,11 +62,12 @@ strong {
 }
 
 .site-subtitle {
+    display:inline-block;
     font-size:1.00em;
     font-family: "Avenir Next", Arial, sans-serif;
     font-weight: normal;
     color: #919395;
-    margin:0;
+    vertical-align: top;
 }
 
 h2 {
@@ -395,7 +396,11 @@ header {
     width: 100%;
     border-bottom: 4px solid {{ site.brand_color }};
     background-color: #fff;
-    padding: 2em 0;
+    padding: 2em 0 1em 0;
+}
+
+.site-logo a {
+    border-bottom: none;
 }
 
 /*
@@ -576,9 +581,15 @@ Desktop Styles
 
     .logo {
         display: block;
-        max-height: 5em;
+        max-height: 8em;
         margin-top: -1.0em;
         float: right;
+    }
+
+    .innomaytion-logo {
+        display: inline-block;
+        max-height: 8em;
+        margin-top: -1.0em;
     }
 
     aside {
@@ -670,3 +681,4 @@ Mobile Styles
     }
 
 }
+
