--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,21 +1,9 @@
-  
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="utf-8">
-    <title>
-      {% if page.title == null %}
-        {{ site.name }}
-      {% else %}
-        {{ page.title }} - {{ site.name }}
-      {% endif %}
-    </title>
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/normalize.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/syntax.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css">
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-      <script src="{{ site.baseurl }}/assets/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
+<head>
+  <meta charset="utf-8">
+
+  <title>innoMAYtion2016</title>
+
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/w3.css">
+
+</head>
